<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:background="#000000"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mufasa.bui_reloaded.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/Layout1_id"
        android:layout_height="50dp"
        android:layout_width="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imgLogo" />

        <TextView

            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginLeft="40dp"

            android:text="@string/txtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHeading"
            android:layout_weight="1" />




    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="170dp"
        app:srcCompat="@drawable/pic"
        android:id="@+id/imageView2" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/Layout2_id"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <TextView

            android:textColor="#ffffff"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/labelAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHeading1"
            android:layout_weight="0.00" />

        <TextView

            android:textColor="#ffffff"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:layout_marginLeft="150dp"

            android:text="@string/labelIOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtHeading2"
            android:layout_weight="0.00" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/Layout3_id"
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <TextView
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="#ffffff"

            android:text="@string/infoAndroid"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtandroidInfo" />

        <TextView
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="#ffffff"
            android:layout_marginLeft="25dp"

            android:text="@string/infoIOS"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtIOSInfo" />

    </LinearLayout>

    <Button

        android:layout_gravity="center"
        android:gravity="center"


        android:text="@string/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:layout_weight="0.48" />


</LinearLayout>
